<resources>
    <string name="app_name">OPMT</string>

    <string name="play_with_computer">Play with Computer</string>
    <string name="play_with_friend">Play with Friend</string>

    <string name="go_first_query">Who will go first?</string>
    <string name="how_to_play">How to play?</string>
    <string name="restart_query">Restart?</string>

    <string name="current_turn">It is currently %1$s\'s turn.</string>

    <string name="result">%1$s has won this turn!</string>
    <string name="ai_forfeit">Ai has forfeited the match!! Player has won this round!</string>

    <string name="computer">computer</string>
    <string name="human">human</string>


    <string name="player1" translatable="false">Player 1</string>
    <string name="player2" translatable="false">Player 2</string>

    <string name="white">white</string>
    <string name="black">black</string>
    <string name="whiteSelected" translatable="false">white-selected</string>
    <string name="blackSelected" translatable="false">black-selected</string>
    <string name="selected" translatable="false">selected</string>
    <string name="empty" translatable="false">empty</string>

    <string name="settings" translatable="false">Settings</string>
    <string name="boardColor" translatable="false">Board Color</string>
    <string name="Player1Color" translatable="false">Player 1 Pieces Color</string>
    <string name="Player2Color" translatable="false">Player 2 Pieces Color</string>
    <string name="backgroundColor" translatable="false">Background Color</string>
    <string name="textColor" translatable="false">Text Color</string>
    <string name="saveChanges" translatable="false">Save Changes</string>
    <string name="restoreDefaults" translatable="false">Restore Defaults</string>



</resources>